--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=config-server
 server.port=8889
-#spring.cloud.config.server.git.uri=https://github.com/liucc0413/MyProject
-#spring.cloud.config.server.git.searchPaths=config
-#spring.cloud.config.label=master
-#spring.cloud.config.server.git.username=your username
-#spring.cloud.config.server.git.password=your password
+spring.cloud.config.server.git.uri=https://github.com/liucc0413/MyProject
+spring.cloud.config.server.git.searchPaths=config
+spring.cloud.config.label=master
+spring.cloud.config.server.git.username=your username
+spring.cloud.config.server.git.password=your password
 
-spring.profiles.active=jdbc
-spring.cloud.config.server.jdbc.sql=SELECT `KEY`,`VALUE` from properties where APPLICATION=? and PROFILE=? and LABEL=?
-
-spring.datasource.url=jdbc:mysql://localhost:3306/lccTest2
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.profiles.active=jdbc
+#spring.cloud.config.server.jdbc.sql=SELECT `KEY`,`VALUE` from properties where APPLICATION=? and PROFILE=? and LABEL=?
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/lccTest2
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
