--- a/config-client/src/main/resources/bootstrap.properties
+++ b/config-client/src/main/resources/bootstrap.properties
@@ -1,5 +1,7 @@
 spring.application.name=service-hi
 spring.cloud.config.label=master
 spring.cloud.config.profile=dev
-spring.cloud.config.uri= http://localhost:8889/
+spring.cloud.config.uri= http://localhost:8887/
 server.port=8881
+
+management.endpoints.web.exposure.include=refresh,health
