--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=config-server
-server.port=8889
+server.port=8887
 spring.cloud.config.server.git.uri=https://github.com/liucc0413/MyProject
 spring.cloud.config.server.git.searchPaths=config
 spring.cloud.config.label=master
 spring.cloud.config.server.git.username=your username
 spring.cloud.config.server.git.password=your password
+encrypt.key=key1
 
 #spring.profiles.active=jdbc
 #spring.cloud.config.server.jdbc.sql=SELECT `KEY`,`VALUE` from properties where APPLICATION=? and PROFILE=? and LABEL=?
